--- a/mimas/src/main/webapp/WEB-INF/web.xml
+++ b/mimas/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
  
-	<display-name>helloworld</display-name>
+	<display-name>mimas</display-name>
  
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
