--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,6 +26,10 @@
 			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
 			<param-value>true</param-value>
 		</init-param>
+		<init-param>
+         <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+         <param-value>com.mimas.util.ResponseCorsFilter</param-value>
+        </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
  
